packages/parser/test/parser/E0116.txt
a := [1, 2
===== err =====
anonymous:1:11: ParseError: E0116 - Expected closing bracket in array expression
1 | a := [1, 2
  |           ^
